--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,6 @@
 @import "banner-bar";
 @import "links";
 @import "banner-home";
-@import "messages";
+@import "message";
 @import "search_form";
 @import "modal";
