--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,29 +1,46 @@
 <div class="container">
-  <div class="card-login">
-  <h1> <%= @sender %> AND <%= @recipient %></h1>
-  <% @messages.each_with_index do |message, i| %>
-  <% if message.user == current_user %>
-    <div class="message-sent">
-  <% else %>
-    <div class="message-received">
-  <% end %>
-      <div class="m-content">
-        <h2><%= @usernames[i].upcase %></h2>
-          <h3><%= message[:content] %> </h3>
-        <p><%= message[:date] %></p>
-      </div>
-      <div class="m-del">
-        <% if message[:user_id] == current_user[:id] %>
-          <%= link_to '🗑️', message_path(message), method: :delete, data: { confirm: "Are you sure?" }%>
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-3">
+      <h3><%= "INSERT SOMETHING HERE" %></h3>
+      <div class="messages">
+        <% @chatbox.messages.each do |message| %>
+          <div class="message <%= message.from?(current_user) ? "right" : "" %>">
+            <%= image_tag message.user.profile.photo, class: "avatar" %>
+            <div class="message-content"><%= message.content %></div>
+          </div>
         <% end %>
       </div>
     </div>
-  <% end %>
-
-  <%= simple_form_for [@chatbox, @message] do |b| %>
-    <%= b.error_notification %>
-    <%= b.input :content, wrapper_html: { class: "input-des" }%>
-    </div>
-    <%= b.button :submit, "", class: "send" %>
-  <% end %>
+  </div>
 </div>
+
+
+<!-- <div class="container"> -->
+  <!-- <div class="card-login"> -->
+  <!-- <h1> <%= @sender %> AND <%= @recipient %></h1> -->
+  <%# @messages.each_with_index do |message, i| %>
+  <%# if message.user == current_user %>
+    <!-- <div class="message-sent"> -->
+  <%# else %>
+    <!-- <div class="message-received"> -->
+  <%# end %>
+      <!-- <div class="m-content"> -->
+        <!-- <h2><%#= @usernames[i].upcase %></h2> -->
+          <!-- <h3><%#= message[:content] %> </h3> -->
+        <!-- <p><%#= message[:date] %></p> -->
+      <!-- </div> -->
+      <!-- <div class="m-del"> -->
+        <%# if message[:user_id] == current_user[:id] %>
+          <%#= link_to '🗑️', message_path(message), method: :delete, data: { confirm: "Are you sure?" }%>
+        <%# end %>
+      <!-- </div> -->
+    <!-- </div> -->
+  <%# end %>
+
+  <%#= simple_form_for [@chatbox, @message] do |b| %>
+    <%#= b.error_notification %>
+    <%#= b.input :content, wrapper_html: { class: "input-des" }%>
+    <!-- </div> -->
+    <%#= b.button :submit, "", class: "send" %>
+  <%# end %>
+<!-- </div> -->
