--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,13 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-xs-offset-3">
-      <h3><%= "INSERT SOMETHING HERE" %></h3>
+      <h3>#<%= "INSERT SOMETHING HERE" %></h3>
       <div class="messages">
         <% @chatbox.messages.each do |message| %>
           <div class="message <%= message.from?(current_user) ? "right" : "" %>">
             <%= image_tag message.user.profile.photo, class: "avatar" %>
             <div class="message-content"><%= message.content %></div>
           </div>
+        <% end %>
+      </div>
+      <div id="create-message">
+        <%= simple_form_for [@chatbox, Message.new] do |f| %>
+          <%= f.input :content, label: false %>
         <% end %>
       </div>
     </div>
