--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -16,18 +16,18 @@
     ></div>
 
   <br><h1>All bars</h1>
-  <div class="cards-grid-4">
+  <div class="row">
     <% @bars.each do |bar| %>
-    <div class="card-img-v">
-      <% if !bar.pictures.empty? %>
-        <%= cl_image_tag bar.pictures[0].photo, width: 200, height: 200, crop: :fill %>
-      <%end%>
-      <div class="left-description">
-      <h3><%= link_to bar.name, bar_path(bar), class:"blue-link" %></h3>
+      <div class="col-xs-10 col-sm-6 col-md-4">
+        <% if !bar.pictures.empty? %>
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
+          <%= link_to bar.name.upcase , bar_path(bar), class:"bw-border-tbg bar" %>
+          </div>
+        <%end%>
       </div>
-    </div>
-    <% end %>
-  </div>
+    <%end%>
+  </div><br>
+
 
 </div>
 
