--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -16,18 +16,18 @@
     ></div>
 
   <br><h1>All artists</h1>
-  <div class="cards-grid-4">
-  <% @artists.each do |artist| %>
-    <div class="card-img-v">
-      <% if artist.photo %>
-        <%= cl_image_tag artist.photo, width: 200, height: 200, crop: :fill %>
-      <%end%>
-      <div class="left-description">
-      <h3><%= link_to artist.username, profile_path(artist), class:"blue-link" %></h3>
-      </div>
-    </div>
-    <% end %>
-  </div>
+
+      <div class="row">
+        <% @artists.each do |artist| %>
+          <div class="col-xs-10 col-sm-6 col-md-4">
+            <% if artist.photo %>
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= artist.photo %>');">
+              <%= link_to artist.username, profile_path(artist), class:"artist no" %>
+              </div>
+            <%end%>
+          </div>
+        <%end%>
+      </div><br>
 
 </div>
 
