--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -65,7 +65,6 @@
           <div class="col-xs-10 col-sm-6 col-md-4">
             <% if !bar.pictures.empty? %>
               <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= bar.pictures[0].photo %>');">
-
               <%= link_to bar.name, bar_path(bar), class:"bw-border-tbg" %>
               </div>
             <%end%>
@@ -86,7 +85,7 @@
                     <% end %>
                   </h4>
 
-                    <%= review[:content] %>
+                    “<%= review[:content] %>”
 
                    -<%= link_to review.user.profile.username, profile_path(review.user.profile), class:"blue-link" %>
                 </div>
