--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-xs-offset-3">
-      <h3>#<%= "INSERT SOMETHING HERE" %></h3>
+      <div class="chat-header"><h4>#<%= "INSERT SOMETHING HERE" %></h4></div>
       <div class="messages">
         <% @chatbox.messages.each do |message| %>
           <%= render "messages/message", message: message %>
