--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -4,8 +4,9 @@
   background-color: #ffffff;
   padding: 20px;
   border: 1px solid #ececec;
+  border-top: none;
   border-bottom-width: 0;
-  max-height: calc(100vh - 70px - 34px - 61px);
+  max-height: calc(100vh - 70px - 45px - 61px - 30px);
   overflow: scroll;
 }
 
@@ -23,7 +24,7 @@
   background-color: #F7F7F7;
   border-radius: 3px;
   margin: 0 10px;
-  padding: 8px 10px;
+  padding: 11px 10px 8px 10px;
 }
 .avatar {
   width: 42px;
@@ -49,6 +50,16 @@ input.form-control {
     outline: none;
     border: 1px solid blue;
     box-shadow: none;
+  }
+}
+
+.chat-header {
+  background-color: #4F2F4C;
+  color: white;
+  padding: 10px 20px;
+  margin-top: 10px;
+  h4 {
+    margin: 0;
   }
 }
 
