--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -1,20 +1,18 @@
 
-<% if events.blank? %>
-  <p>Sorry, no events found.</p>
-<% else %>
+<% if !@events.blank? %>
 
-    <div
+  <div
       id="map"
       style="width: 100%;
       height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div><br>
+  ></div><br>
 
   <div class="row">
-    <% events.each do |event| %>
+    <% @events.each do |event| %>
       <div class="col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
           <p class="title"><%= event.name %></p>
           <p class="white"><%= event.start_date %></p>
           <p class="white"><%= event.end_date %></p>
@@ -27,6 +25,7 @@
             </button>
 
             <%= render 'pages/modal_prev', event: event %>
+
 
 <!--           <#%= link_to "Preview", preview_event_path(event), class: "button"%> -->
 
