added tags for google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <% render 'gst'%>
+    <%render 'gtm'%>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>BART</title>
@@ -11,9 +14,10 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
   <body>
+    <%render 'gtmb'%>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-      <%= render 'shared/register' %>
+    <%= render 'shared/register' %>
 
       <%= yield %>
 
