--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <% render 'gst'%>
-    <%render 'gtm'%>
+    <% render 'layouts/gst'%>
+    <%render 'layouts/gtm'%>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,7 +14,7 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
   <body>
-    <%render 'gtmb'%>
+    <%render 'layouts/gtmb'%>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= render 'shared/register' %>
