--- a/app/views/pages/_home-banner.html.erb
+++ b/app/views/pages/_home-banner.html.erb
@@ -8,30 +8,28 @@
     <!--/.Indicators-->
     <!--Slides-->
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
+      <div class="carousel-item active">
             <div class="view">
-              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/hzgs56Ze49s/1200x600" alt="First slide">
-
+              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/kMRMcUcO81M/1200x600" alt="First slide">
               <div class="mask rgba-black-strong"></div>
               <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Create amazing </h3>
-                      <h3>experiences </h3>
-                      <h4>Be unique </h4>
-                      <br><h4><%= link_to "Register your bar", new_profile_path, class: "bw-border-tbg" %></h4>
+                    <h3>B A R T </h3>
+                      <h2>Connecting locals, </h2>
+                      <h2>Creating experiences ✨</h2>
+                      <br><h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
-
               </div>
             </div>
-        </div>
+          </div>
         <div class="carousel-item">
             <div class="view">
-              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/0rlfiRSdVzU/1200x600" alt="Second slide">
+              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/QfAX7_xjxm4/1200x600" alt="Second slide">
               <div class="mask rgba-black-strong"></div>
                <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Promote culture</h3>
-                      <h4>Give emerging artists the opportunity to showcase their work</h4>
+                      <h3>Promoting  c u l t u r e</h3>
+                      <h2>Give emerging artists the opportunity to showcase their work</h2>
                       <br><h4><%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %></h4>
                     </class>
 
@@ -45,8 +43,10 @@
                 <div class="mask rgba-black-strong"></div>
                 <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Join our community !</h3>
-                      <h4>A network made to promote culture, empower local businesses & artists, craft original experiences.</h4>
+                      <h3>J o i n</h3>
+                      <h3> our </h3>
+                      <h3>community !</h3>
+                      <h2>A network made to promote culture, empower local businesses & artists, craft original experiences.</h2>
                       <br><h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
               </div>
