--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -4,7 +4,7 @@
       <div class="chat-header"><h4>#<%= "INSERT SOMETHING HERE" %></h4></div>
       <div class="messages">
         <% @chatbox.messages.each do |message| %>
-          <%= render "messages/message", message: message %>
+          <%= render "messages/message", message: message, user_is_messages_author: message.user == current_user %>
         <% end %>
       </div>
       <div id="create-message">
@@ -17,9 +17,14 @@
 </div>
 <% content_for :after_js do %>
   <script>
+    scrollLastMessageIntoView();
     App['chatbox_<%= @chatbox.id %>'] = App.cable.subscriptions.create({ channel: 'ChatboxesChannel', chatbox_id: <%= @chatbox.id %> }, {
       received: (data) => {
-        console.log(data);
+        if (data.current_user_id !== <%= current_user.id %>) {
+          const messagesContainer = document.querySelector('.messages');
+          messagesContainer.insertAdjacentHTML('beforeend', data.message_partial);
+          scrollLastMessageIntoView();
+        }
       }
     })
   </script>
