--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
 <div id="events-container">
-  <%= render :partial => 'events/events_list', :locals => { :events => @events } %>
+   <%= render :partial => 'events/events_list', :locals => { events: @events } %>
 </div>
 
 
