--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,3 +1,4 @@
+<br><br><br><br><br>
 <div class="container">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
@@ -8,8 +9,10 @@
         <% end %>
       </div>
       <div id="create-message">
-        <%= simple_form_for [ @chatbox, Message.new ], remote: true do |f| %>
-          <%= f.input :content, label: false %>
+        <%= simple_form_for [ @chatbox, Message.new ], remote: true, html: {autocomplete: "off" } do |f| %>
+          <%#= f.input :content, label: false %>
+          <%= f.text_field :content, label: false %>
+          <%#= f.button :submit %>
         <% end %>
       </div>
     </div>
