--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-      <div class="chat-header"><h4>#<%= "INSERT SOMETHING HERE" %></h4></div>
+      <div class="chat-header"><h4>#<%= "#{@sender} and #{@recipient}" %></h4></div>
       <div class="messages">
         <% @chatbox.messages.each do |message| %>
           <%= render "messages/message", message: message, user_is_messages_author: message.user == current_user %>
