--- a/app/views/profiles/_artist-banner.html.erb
+++ b/app/views/profiles/_artist-banner.html.erb
@@ -2,15 +2,17 @@
 
   <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/F35EmcotWPY/1200x600);">
     <div class="container">
-      <h1><%= @profile[:username].capitalize %></h1>
-      <% if current_user == @profile.user %>
+      <div class="content">
+        <h1><%= @profile[:username].capitalize %></h1>
+        <% if current_user == @profile.user %>
 
-        <br><br><p><%= link_to 'Add pictures', new_profile_artist_picture_path(@profile), class:"bw-border-tbg" if current_user == @profile.user %></p>
-      <%end%>
+          <br><br><p><%= link_to 'Add pictures', new_profile_artist_picture_path(@profile), class:"bw-border-tbg" if current_user == @profile.user %></p>
+        <%end%>
 
-      <h3><% if !current_user.bars.empty? && current_user.profile.is_artist %>
-        <%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class:"b-border-tbg" %>
-        <% end %></h3>
+        <h3><% if !current_user.bars.empty? && current_user.profile.is_artist %>
+          <%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class:"b-border-tbg" %>
+          <% end %></h3>
+        </div>
     </div>
   </div>
 
@@ -21,15 +23,17 @@
 
   <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @pictures[0].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>');">
     <div class="container">
-      <h1><%= @profile[:username].capitalize %> </h1>
-       <% if current_user == @profile.user %>
+      <div class="content">
+        <h1><%= @profile[:username].capitalize %> </h1>
+         <% if current_user == @profile.user %>
 
-        <br><br><p><%= link_to 'Add pictures', new_profile_artist_picture_path(@profile), class:"bw-border-tbg" if current_user == @profile.user %></p>
-      <%end%>
+          <br><br><p><%= link_to 'Add pictures', new_profile_artist_picture_path(@profile), class:"bw-border-tbg" if current_user == @profile.user %></p>
+        <%end%>
 
-      <h3><% if !current_user.bars.empty? && current_user.profile.is_artist %>
-        <%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class:"b-border-tbg" %>
-        <% end %></h3>
+        <h3><% if !current_user.bars.empty? && current_user.profile.is_artist %>
+          <%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class:"b-border-tbg" %>
+          <% end %></h3>
+        </div>
     </div>
   </div>
 
