--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<br><br><br><br><br><div class="container">
   <% if current_user == @event.bar.user %>
     <h1><%= "EDIT #{@event.name}" %></h1>
     <div class="card-login">
