--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<br><br><br><div class="container">
   <h1>create a new event</h1>
   <div class="card-login">
     <%= render 'form' %>
