--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -31,15 +31,15 @@
               </div>
             <% end %>
         </div>
-
+        <div class="up-fix">
         <div
           id="map"
           style="width: 300px;
-          height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          height: 100vh; margin: 10px auto; margin-top: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         ></div>
-
+        </div>
     </div>
 
   <% else %>
