--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -14,8 +14,8 @@
       <div class="col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
           <p class="title"><%= event.name %></p>
-          <p class="white"><%= event.start_date %></p>
-          <p class="white"><%= event.end_date %></p>
+          <p class="white"><%= event.start_date.strftime("%a %B %d | %H:%M") %></p>
+          <p class="white"><%= event.end_date.strftime("%a %B %d | %H:%M") %></p>
           <% if current_user %>
             <%= link_to "Show", event_path(event), class: "button" %>
           <% else %>
@@ -24,7 +24,7 @@
               Preview
             </button>
 
-            <%= render 'pages/modal_prev', event: event %>
+            <%= render 'pages/modal_prev' %>
 
 
 <!--           <#%= link_to "Preview", preview_event_path(event), class: "button"%> -->
