style updates to bar show

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -56,14 +56,40 @@
   img {
     height: 100%;
     width: auto;
+    object-fit: cover;
   }
   .left-description {
     line-height: 90%;
+    opacity: .7;
     h2 , i {
       color: $gray;
     }
   }
 }
+
+// .card-product {
+//   overflow: hidden;
+//   height: 300px;
+//   background: white;
+//   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+//   display: flex;
+//   align-items: start;
+//   margin: 10px auto;
+//   img {
+//     height: 100%;
+//     width: auto;
+//     object-fit: cover;
+//   }
+//   .card-product-infos {
+//     line-height: 90%;
+//     padding: 16px;
+//     opacity: .7;
+//     h2 , i {
+//       color: $gray;
+//     }
+//   }
+// }
+
 
 .card-hz-s{
   background-color:white;
@@ -203,19 +229,23 @@ height: 100%;
   opacity: 1;
 }
 
+.photocard {
+  position: relative;
+}
+
 .card-remove-link {
   color: #ffffff;
   border-radius: 50%;
-  border: 1px solid white;
+  border: 1px solid #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   position: absolute;
-  right: 10px;
-  top: 10px;
-  transform: rotate(45deg);
+  right: 30px;
+  top: 5px;
+  // transform: rotate(45deg);
   opacity: 0.8;
   &:hover {
     color: white;
