--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -9,7 +9,7 @@
       <%= cl_image_tag picture.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
 
       <% if current_user == @bar.user %>
-        <%= link_to "✖️" , picture_path(picture), method: :delete, data: { confirm: "Are you sure?" }, class:"no" %>
+        <%= link_to "✖️" , picture_path(picture), method: :delete, data: { confirm: "Are you sure you want to delete this picture?" }, class:"card-remove-link" %>
       <% end %>
       </div>
     <% end %>
@@ -17,10 +17,11 @@
 
   <% if !@bar.events.empty? %>
 
-    <br><div class="cards-grid-3quarter">
+        <div class="up-fix-bar">
+        <h2>Events</h2>
+        <div class="cards-grid-3quarter">
 
         <div class="events">
-            <h2>Events</h2>
             <% @bar.events.each do |event| %>
               <div class="card-hz-bg">
                 <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
@@ -31,11 +32,10 @@
               </div>
             <% end %>
         </div>
-        <div class="up-fix">
         <div
           id="map"
           style="width: 300px;
-          height: 100vh; margin: 10px auto; margin-top: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          height: 100vh; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         ></div>
