--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -20,11 +20,11 @@
             <%= link_to "Show", event_path(event), class: "button" %>
           <% else %>
 
-            <button type="button" class="button" data-toggle="modal" data-target="#exampleModalCenter">
+            <button type="button" class="button" data-toggle="modal" data-target="#exampleModalCenter-<%= event.id %>">
               Preview
             </button>
 
-            <%= render 'pages/modal_prev' %>
+            <%= render 'pages/modal_prev',  event: event %>
 
 
 <!--           <#%= link_to "Preview", preview_event_path(event), class: "button"%> -->
