Added instagram_username to new profile form, under description

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -26,6 +26,10 @@
                 autofocus: true,
                 input_html: { autocomplete: "artist_description" }%>
 
+    <%= f.input :instagram_username,
+                autofocus: true,
+                input_html: { autocomplete: "instagram_username" }%>
+
     <%= f.input :photo %>
     <%= f.input :photo_cache, as: :hidden %>
 
